--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -4,7 +4,11 @@ body {
 	font-size: 14px;
 }
 
-.row::after, .clearfix::after{
+div {
+	box-sizing: border-box;;
+}
+
+div::after {
 	display: table;
 	content: " ";
 	clear: both;	
@@ -12,32 +16,25 @@ body {
 
 .row {	
 	margin-bottom: 2%;	
-	position: relative;
-	box-sizing:border-box;
+	position: relative;	
 }
 
-.column {
-	position: relative;
-	float: left;
+.page-content {
+	width: 100%;
+	background: #f8f8f8;
+	display: flex;
+	justify-content: center;	
+	flex-direction: column;
 }
-
-.column + .column {margin-left: 3%;}
-
-.col-art {width: 60%;}
-
-.col-attachment {width: 36%;}
 
 .page-header {		
 	padding-top: 2%;
 	padding-bottom: 2%;
-	background: #49274a;
-
 }
 
 .header {		
 	text-transform: uppercase;
-	font-family: 'Indie Flower', cursive;
-	color: #fff;
+	font-family: 'Josefin Sans',sans-serif;
 	text-align: center;
 }
 
@@ -46,47 +43,33 @@ h1, h2, h3, h4 {
 	margin-bottom: 0;
 }
 
-.post-content {	
-	padding: 2%;	
-	margin-right: 3%;
-	margin-left: 3%;
-	background: rgba(197,193,192,0.7);
+.post-container {
+	width: 75%;
+	margin-top:70px;
+	margin-left: auto;
+	margin-right: auto;
+	background:#fff;
+	height: 375px;
+	border:1px solid #e7e7e7;
 }
 
-.background-container {
-	-webkit-filter: blur(5px);
-  -moz-filter: blur(5px);
-  -o-filter: blur(5px);
-  -ms-filter: blur(5px);
-  filter: blur(5px);
-  width: 100%;
-  height: 100%;
-  z-index: -1;  
-  position: absolute;
-  left: 0;
-  background-position: center;
-  overflow: hidden;
-  background-size: cover;
+.image-content {
+	width: 60%;
+	height: 100%;
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat; 	
+	-webkit-filter: greyscale(100%);
+	filter: grayscale(100%);
+	-webkit-transition: all 0.5s linear;
+	transition: all 0.5s linear;
 }
 
-.post-header {	
-	font-size: 1.25em;
-  background: #94618e;
-  width: 10%;
-  text-align: center;
-  padding: 1%;
-  color: #fff;
-  text-transform: capitalize;
+.image-content:hover {
+	-webkit-filter: greyscale(0%);
+	filter: grayscale(0%);
 }
 
-.post-art {width: 100%;}
-
-
-.tag-pill {
-	color: #fff;
-	font-size: 0.8em;
-	display: inline-block;
-	padding: 1% 4%;	
-	border-radius: 20px;
-	background: #cf6766;
+.post-container:nth-child(even) .image-content {
+	float: right;
 }
