--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -34,7 +34,6 @@ div::after {
 
 .header {		
 	text-transform: uppercase;
-	font-family: 'Josefin Sans',sans-serif;
 	text-align: center;
 }
 
@@ -51,9 +50,41 @@ h1, h2, h3, h4 {
 	background:#fff;
 	height: 375px;
 	border:1px solid #e7e7e7;
+	box-shadow: 0px 2px 10px #e3e3e3;
+	-webkit-animation: fadeIn 2s;
+	-moz-animation: fadeIn 2s;
+	-ms-animation: fadeIn 2s;
+	-0-animation: fadeIn 2s;
+	animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+	from { opacity:0; }
+	to { opacity: 1; }
+}
+
+@-webkit-keyframes fadeIn {
+	from { opacity:0; }
+	to { opacity: 1; }
+}
+
+@-ms-keyframes fadeIn {
+	from { opacity:0; }
+	to { opacity: 1; }
+}
+
+@-moz-keyframes fadeIn {
+	from { opacity:0; }
+	to { opacity: 1; }
+}
+
+@-o-keyframes fadeIn {
+	from { opacity:0; }
+	to { opacity: 1; }
 }
 
 .image-content {
+	float: left;
 	width: 60%;
 	height: 100%;
 	background-position: center;
@@ -72,4 +103,33 @@ h1, h2, h3, h4 {
 
 .post-container:nth-child(even) .image-content {
 	float: right;
+}
+
+.text-content {
+	width: 40%;
+	height: 100%;
+	display: inline-block;
+}
+
+.content-title {
+	font-family: 'Josefin Sans',sans-serif;
+	margin: 3%;	
+}
+
+.content-title > h3 {
+	margin-bottom: 4%;
+	font-size: 1.3em;
+}
+
+.content-title > h4 {
+	border-bottom: 1px solid #dadfe1;	
+	padding-bottom: 4%;
+	color: #BDC3C7;
+	font-weight: lighter;
+	font-style: italic;
+}
+
+.content-writeup {
+	font-family:  'Crimson Text', serif;
+	margin: 0 3%;
 }
