--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -106,6 +106,7 @@ h1, h2, h3, h4 {
 }
 
 .text-content {
+	position: relative;
 	width: 40%;
 	height: 100%;
 	display: inline-block;
@@ -132,4 +133,10 @@ h1, h2, h3, h4 {
 .content-writeup {
 	font-family:  'Crimson Text', serif;
 	margin: 0 3%;
+}
+
+.audio-widget-container {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 }
