--- a/public/views/home.html
+++ b/public/views/home.html
@@ -10,6 +10,9 @@
 				<p ng-bind-html="post.writeUp">					
 				</p>
 			</div>
+			<div class="audio-widget-container">
+				<iframe width="100%" height="110" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?visual=false&buying=false&liking=true&download=false&show_user=false&url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F49931&show_artwork=false&color=000&auto_play=false&show_comments=false&maxheight=110"></iframe>
+			</div>
 		</div>
 	</div>
 </div>	
