--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,25 +14,14 @@ div::after {
 	clear: both;	
 }
 
-.row {	
-	margin-bottom: 2%;	
-	position: relative;	
+.page-header {	
+	background: #000;	
+	padding-top: 3%;
+	padding-bottom: 3%;
 }
 
-.page-content {
-	width: 100%;
-	background: #f8f8f8;
-	display: flex;
-	justify-content: center;	
-	flex-direction: column;
-}
-
-.page-header {		
-	padding-top: 2%;
-	padding-bottom: 2%;
-}
-
-.header {		
+.header {
+	color: #fff;		
 	text-transform: uppercase;
 	text-align: center;
 }
@@ -42,13 +31,18 @@ h1, h2, h3, h4 {
 	margin-bottom: 0;
 }
 
+.page-content {
+	width: 100%;
+	padding: 0 3%;
+	padding-bottom: 3%;
+	background: #f2f2f2;	
+}
+
 .post-container {
-	width: 75%;
-	margin-top:70px;
-	margin-left: auto;
-	margin-right: auto;
+	width: 100%%;	
+	margin-top:70px;	
 	background:#fff;
-	height: 375px;
+	height: 500px;
 	border:1px solid #e7e7e7;
 	box-shadow: 0px 2px 10px #e3e3e3;
 	-webkit-animation: fadeIn 2s;
@@ -56,6 +50,10 @@ h1, h2, h3, h4 {
 	-ms-animation: fadeIn 2s;
 	-0-animation: fadeIn 2s;
 	animation: fadeIn 2s;
+}
+
+.post-container:nth-child(even) {
+	
 }
 
 @keyframes fadeIn {
@@ -84,50 +82,61 @@ h1, h2, h3, h4 {
 }
 
 .image-content {
+	position: relative;
 	float: left;
-	width: 60%;
+	width: 100%;
 	height: 100%;
 	background-position: center;
 	background-size: cover;
-	background-repeat: no-repeat; 	
-	-webkit-filter: greyscale(100%);
-	filter: grayscale(100%);
+	background-repeat: no-repeat; 		
 	-webkit-transition: all 0.5s linear;
 	transition: all 0.5s linear;
 }
 
-.image-content:hover {
-	-webkit-filter: greyscale(0%);
-	filter: grayscale(0%);
+.image-overlay {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	opacity: 0;
+    width: 100%;
+    height: inherit;
+    background: rgba(0,0,0,0.7);
+    z-index: 2;
+}
+
+.image-overlay:hover {
+	-webkit-animation: fadeIn 1s;
+	-moz-animation: fadeIn 1s;
+	-ms-animation: fadeIn 1s;
+	-0-animation: fadeIn 1s;
+	animation: fadeIn 1s;	
+	opacity: 1;
 }
 
 .post-container:nth-child(even) .image-content {
 	float: right;
 }
 
-.text-content {
-	position: relative;
-	width: 40%;
-	height: 100%;
-	display: inline-block;
-}
-
 .content-title {
-	font-family: 'Josefin Sans',sans-serif;
-	margin: 3%;	
+	color: #fff;
+	font-family: 'Montserrat',sans-serif;
+	margin: 0 auto;	
+	margin-bottom: 8%;
+	max-width: 80%;
 }
 
-.content-title > h3 {
-	margin-bottom: 4%;
-	font-size: 1.3em;
-}
-
-.content-title > h4 {
+.content-title > h3 {	
+	font-size: 1.5em;
+	text-align: center;
 	border-bottom: 1px solid #dadfe1;	
 	padding-bottom: 4%;
+}
+
+.content-title > h4 {	
+	padding-top: 4%;
 	color: #BDC3C7;
-	font-weight: lighter;
-	font-style: italic;
+	font-weight: lighter;	
+	text-align: center;
 }
 
 .content-writeup {
@@ -139,4 +148,15 @@ h1, h2, h3, h4 {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
+	opacity: 0.7;
+	-webkit-animation: fadeIn 1s;
+	-moz-animation: fadeIn 1s;
+	-ms-animation: fadeIn 1s;
+	-0-animation: fadeIn 1s;
+	animation: fadeIn 1s;
+}
+
+.audio-widget-container > iframe {
+	position: absolute;
+	bottom: 0;
 }
