--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,28 +14,32 @@ div::after {
 	clear: both;	
 }
 
-.page-header {	
-	background: #000;	
-	padding-top: 3%;
-	padding-bottom: 3%;
-}
-
-.header {
-	color: #fff;		
-	text-transform: uppercase;
-	text-align: center;
-}
-
 h1, h2, h3, h4 { 
 	margin-top: 0; 
 	margin-bottom: 0;
 }
 
+.page-container {
+	background: #f2f2f2;	
+}
+
+.page-header {	
+	background: #222222;	
+	padding-top: 3%;
+	padding-bottom: 3%;
+}
+
+.header {
+	font-family: 'Montserrat Alternates',sans-serif;
+	color: #fff;		
+	text-transform: uppercase;
+	text-align: center;
+}
+
 .page-content {
 	width: 100%;
-	padding: 0 3%;
-	padding-bottom: 3%;
-	background: #f2f2f2;	
+	padding: 0 4%;
+	padding-bottom: 3%;	
 }
 
 .post-container {
@@ -82,8 +86,7 @@ h1, h2, h3, h4 {
 }
 
 .image-content {
-	position: relative;
-	float: left;
+	position: relative;	
 	width: 100%;
 	height: 100%;
 	background-position: center;
@@ -104,7 +107,7 @@ h1, h2, h3, h4 {
     z-index: 2;
 }
 
-.image-overlay:hover {
+.image-overlay:hover, .image-overlay:focus {
 	-webkit-animation: fadeIn 1s;
 	-moz-animation: fadeIn 1s;
 	-ms-animation: fadeIn 1s;
@@ -113,13 +116,10 @@ h1, h2, h3, h4 {
 	opacity: 1;
 }
 
-.post-container:nth-child(even) .image-content {
-	float: right;
-}
 
 .content-title {
 	color: #fff;
-	font-family: 'Montserrat',sans-serif;
+	font-family: 'Montserrat',sans-serif;	
 	margin: 0 auto;	
 	margin-bottom: 8%;
 	max-width: 80%;
@@ -127,15 +127,16 @@ h1, h2, h3, h4 {
 
 .content-title > h3 {	
 	font-size: 1.5em;
+	font-weight: lighter;
 	text-align: center;
 	border-bottom: 1px solid #dadfe1;	
 	padding-bottom: 4%;
 }
 
 .content-title > h4 {	
-	padding-top: 4%;
-	color: #BDC3C7;
 	font-weight: lighter;	
+	padding-top: 4%;
+	color: #BDC3C7;		
 	text-align: center;
 }
 
