--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,8 +1,13 @@
+<div class="page-header">							
+	<div class="header">					
+		<h1>The Paranoid Possum</h1>
+	</div>								
+</div>
 <div class="page-content">
 	<div class="post-container" ng-repeat="post in posts">		
 		<div class="image-content" style="background-image: url({{post.image}});">
 			<div class="image-overlay">
-				<div class="content-title">
+				<a href="#/posts/{{post._id}}"></a><div class="content-title">
 					<h3>{{post.title}}</h3>
 					<h4 ng-show="{{post.subtitle}}"><span>"</span><span ng-bind-html="post.subtitle"></span><span>"</span></h4>
 				</div>
