--- a/public/views/home.html
+++ b/public/views/home.html
@@ -7,10 +7,12 @@
 	<div class="post-container" ng-repeat="post in posts">		
 		<div class="image-content" style="background-image: url({{post.image}});">
 			<div class="image-overlay">
-				<a href="#/posts/{{post._id}}"></a><div class="content-title">
-					<h3>{{post.title}}</h3>
-					<h4 ng-show="{{post.subtitle}}"><span>"</span><span ng-bind-html="post.subtitle"></span><span>"</span></h4>
-				</div>
+				<a href="#/posts/{{post._id}}">
+					<div class="content-title">
+						<h3>{{post.title}}</h3>
+						<h4 ng-show="{{post.subtitle}}"><span>"</span><span ng-bind-html="post.subtitle"></span><span>"</span></h4>
+					</div>
+				</a>	
 				<div class="audio-widget-container">
 					<iframe width="100%" height="95" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?visual=false&buying=false&liking=true&download=false&show_user=false&url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F49931&show_artwork=false&color=6C7A89&auto_play=false&show_comments=false&maxheight=68"></iframe>
 				</div>	
