--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,6 +14,16 @@ div::after {
 	clear: both;	
 }
 
+h1, h2, h3, h4 { 
+	margin-top: 0; 
+	margin-bottom: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .row {	
 	margin-bottom: 2%;	
 	position: relative;	
@@ -21,6 +31,7 @@ div::after {
 
 .page-content {
 	width: 100%;
+	padding: 0 12.5%;
 	background: #f8f8f8;
 	display: flex;
 	justify-content: center;	
@@ -28,25 +39,19 @@ div::after {
 }
 
 .page-header {		
-	padding-top: 2%;
-	padding-bottom: 2%;
+	padding-top: 3%;
+	padding-bottom: 3%;
+	background-color: #222224;
 }
 
 .header {		
+	color: #fff;
 	text-transform: uppercase;
 	text-align: center;
 }
 
-h1, h2, h3, h4 { 
-	margin-top: 0; 
-	margin-bottom: 0;
-}
-
-.post-container {
-	width: 75%;
-	margin-top:70px;
-	margin-left: auto;
-	margin-right: auto;
+.post-container {	
+	margin-top:70px;	
 	background:#fff;
 	height: 375px;
 	border:1px solid #e7e7e7;
@@ -84,21 +89,32 @@ h1, h2, h3, h4 {
 }
 
 .image-content {
+	position: relative;
 	float: left;
 	width: 60%;
 	height: 100%;
 	background-position: center;
 	background-size: cover;
-	background-repeat: no-repeat; 	
-	-webkit-filter: greyscale(100%);
-	filter: grayscale(100%);
-	-webkit-transition: all 0.5s linear;
-	transition: all 0.5s linear;
+	background-repeat: no-repeat; 		
 }
 
-.image-content:hover {
-	-webkit-filter: greyscale(0%);
-	filter: grayscale(0%);
+.image-overlay {
+	position: absolute;
+	z-index: 1;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+	background: rgba(0,0,0,0.7);
+}
+
+.image-overlay:hover {
+	opacity: 1;
+	-webkit-animation: fadeIn 0.5s;
+	-moz-animation: fadeIn 0.5s;
+	-ms-animation: fadeIn 0.5s;
+	-0-animation: fadeIn 0.5s;
+	animation: fadeIn 0.5s;
 }
 
 .post-container:nth-child(even) .image-content {
@@ -109,25 +125,48 @@ h1, h2, h3, h4 {
 	position: relative;
 	width: 40%;
 	height: 100%;
-	display: inline-block;
+	display: flex;
+	align-items: center;
+	text-align: center;
 }
 
 .content-title {
-	font-family: 'Josefin Sans',sans-serif;
-	margin: 3%;	
+	font-family: 'Josefin Sans',sans-serif;	
+	margin-bottom: 60px;	
+	padding: 0 4%;		
+	line-height: 1.3em;
+	
 }
 
 .content-title > h3 {
-	margin-bottom: 4%;
+	padding-bottom: 10px;
 	font-size: 1.3em;
+	text-transform: capitalize;
+	border-bottom: 1px solid #dadfe1;	
 }
 
-.content-title > h4 {
-	border-bottom: 1px solid #dadfe1;	
-	padding-bottom: 4%;
+.content-title > h4 {	
+	margin-top: 10px;
 	color: #BDC3C7;
 	font-weight: lighter;
 	font-style: italic;
+	transition: all 0.5s ease;
+}
+
+.content-title > p {
+	text-transform: uppercase;
+    font-size: 0.7em;
+    margin-top: 20px;    
+    transition: all 0.5s ease;
+}
+
+.content-title:hover p {
+	margin-top: 35px;
+	
+}
+
+.blog-link {
+	margin: 0 auto;
 }
 
 .content-writeup {
@@ -138,5 +177,20 @@ h1, h2, h3, h4 {
 .audio-widget-container {
 	position: absolute;
 	bottom: 0;
+	margin-bottom: -1%;
 	width: 100%;
+	-webkit-animation: fadeIn 2s;
+	-moz-animation: fadeIn 2s;
+	-ms-animation: fadeIn 2s;
+	-0-animation: fadeIn 2s;
+	animation: fadeIn 2s;
+}
+
+.blog-header {
+	width: 100%;
+	height: 450px;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
 }
