--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,17 +1,23 @@
+<div class="page-header">							
+	<div class="header">					
+		<h1>The Paranoid Possum</h1>
+	</div>								
+</div>
 <div class="page-content">
 	<div class="post-container" ng-repeat="post in posts">
-		<div class="image-content" style="background-image: url({{post.image}});"></div>
+		<div class="image-content" style="background-image: url({{post.image}});">
+			<div class="image-overlay"></div>
+		</div>
 		<div class="text-content">
-			<div class="content-title">
-				<h3>{{post.title}}</h3>
-				<h4 ng-show="{{post.subtitle}}"><span>"</span><span ng-bind-html="post.subtitle"></span><span>"</span></h4>
-			</div>
-			<div class="content-writeup">
-				<p ng-bind-html="post.writeUp">					
-				</p>
-			</div>
+			<a class="blog-link" href="#/posts/{{post._id}}">
+				<div class="content-title">
+					<h3><span ng-bind="post.title"></span></h3>
+					<h4 ng-show="post.subtitle"><span>"</span><span ng-bind-html="post.subtitle"></span><span>"</span></h4>
+					<p>Read more</p>
+				</div>			
+			</a>	
 			<div class="audio-widget-container">
-				<iframe width="100%" height="110" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?visual=false&buying=false&liking=true&download=false&show_user=false&url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F49931&show_artwork=false&color=000&auto_play=false&show_comments=false&maxheight=110"></iframe>
+				<iframe width="100%" height="110" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?visual=false&buying=false&liking=true&sharing=true&download=false&show_user=false&url=https%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F49931&show_artwork=false&color=333333&auto_play=false&show_comments=false&maxheight=110"></iframe>
 			</div>
 		</div>
 	</div>
