--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,6 +1,7 @@
 <div class="page-header">							
 	<div class="header">					
 		<h1>The Paranoid Possum</h1>
+		<h3>Music, art and everything</h3>
 	</div>								
 </div>
 <div class="page-content">
