--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -38,31 +38,37 @@ a {
 	flex-direction: column;
 }
 
-.page-header {	
-	width: 90%;
-	margin: auto;		 
+.page-header {		
+	position: relative;	
 	padding-top: 3%;
-	padding-bottom: 3%;
-	background-color: #222224;
+	padding-bottom: 3%;	
 }
 
 .header {
 	width: 40%;
-	margin: 0 auto;		
-	color: #fff;	
+	margin: 0 auto;			
 	text-align: center;
 }
 
 .header > h1 {
 	display: block;
 	padding-bottom: 3%;	
-	border-bottom: 1px solid #dadfe1;	 
+	border-bottom: 1px solid;	 
 	text-transform: uppercase;
 }
 
 .header > h3 {
 	padding-top: 3%;
 }
+
+.back-button {
+	position: absolute;	
+	top: 33%;
+	float: left;
+	margin-left: 20px;
+
+}
+
 
 .post-container {	
 	margin-top:70px;	
@@ -207,4 +213,17 @@ a {
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
+	-webkit-animation: fadeIn 1s;
+	-moz-animation: fadeIn 1s;
+	-ms-animation: fadeIn 1s;
+	-0-animation: fadeIn 1s;
+	animation: fadeIn 1s;
 }
+
+.blog-content {
+	padding: 0 20%;
+	margin: 50px 0;
+    font-size: 1.5em;
+    line-height: 1.5em;
+}
+
