--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,5 +1,15 @@
+<div class="page-header">								
+	<div class="header">						
+		<h1>Paranoid Possum</h1>
+		<h3>Music, art and everything</h3>
+	</div>	
+	<div class="search fa-1.2x">
+		<input type="text" class="search-box push-right" ng-model="search">
+		<i class="fa fa-search push-right"></i>					
+	</div>							
+</div>			
 <div class="page-content">
-	<div class="post-container" ng-repeat="post in posts">
+	<div class="post-container" ng-repeat="post in posts | filter : search">
 		<div class="image-content" style="background-image: url({{post.image}});">
 			<div class="image-overlay"></div>
 		</div>
